# gtk_media

./: .gitignore  CMakeLists.txt  README.md
include/: main_core.h  syslog.h
include/log/: syslog.h
res/: tmp
src/: .#main.c  CMakeLists.txt  main  main.c  main.c~  main_core.c
test/: CMakeLists.txt  test_log.c
test/exec_output/: test_log
